fix style issue on mobile screen

--- a/app/styles/form.module.css
+++ b/app/styles/form.module.css
@@ -307,4 +307,7 @@
     height: 100%;
     padding: 10px;
   }
+  .item {
+    min-height: 97.4px;
+  }
 }
